testsuite/tests/typecheck/should_fail/T17301.stderr

T17301.hs:22:3: error:
    • Uninferrable type variable (a0 :: A) in
      type family equation right-hand side: 'MkATySing @(B a0) ('SB @a0)
    • In the type family declaration for ‘Forget’
